Integration python in CMake

--- a/.ci_environment_py.yaml
+++ b/.ci_environment_py.yaml
@@ -3,8 +3,11 @@ channels:
 dependencies:
   - xtensor
   - eigen
+  - cmake
+  - ninja
   - setuptools_scm
   - python
+  - pybind11
   - pyxtensor
   - numpy
   - nomkl
