--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,9 +81,7 @@ jobs:
       run: ctest --output-on-failure
 
     - name: Build and install Python module
-      run: |
-        python setup.py build
-        python setup.py install
+      run: python -m pip install . -vvv
 
     - name: Run Python tests
       working-directory: test/basic-python
@@ -131,9 +129,7 @@ jobs:
         auto-activate-base: false
 
     - name: Build and install Python module
-      run: |
-        python setup.py build
-        python setup.py install
+      run: python -m pip install . -vvv
 
     - name: Run Python tests
       working-directory: test/basic-python
