--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,22 +42,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set conda environment
-      if: runner.os != 'Windows'
       uses: mamba-org/provision-with-micromamba@main
       with:
         environment-file: ${{ matrix.conda }}
         environment-name: myenv
-
-    - name: Set conda environment
-      if: runner.os == 'Windows'
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        mamba-version: "*"
-        channels: conda-forge,defaults
-        channel-priority: true
-        environment-file: ${{ matrix.conda }}
-        activate-environment: myenv
-        auto-activate-base: false
 
     - name: Set dummy version
       run: echo "SETUPTOOLS_SCM_PRETEND_VERSION=ci" >> $GITHUB_ENV
@@ -69,7 +57,7 @@ jobs:
     - name: Configure using CMake (Windows)
       if: runner.os == 'Windows'
       run: |
-        conda install -c conda-forge clang_win-64 ninja
+        mamba install -c conda-forge clang_win-64 ninja
         cmake -Bbuild -G Ninja ${{ matrix.config }} -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
 
     - name: Build C++ ${{ matrix.prop }}
@@ -118,15 +106,11 @@ jobs:
     - name: Basic GitHub action setup
       uses: actions/checkout@v2
 
-    - name: Set conda environment "test"
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Set conda environment
+      uses: mamba-org/provision-with-micromamba@main
       with:
-        mamba-version: "*"
-        channels: conda-forge,defaults
-        channel-priority: true
         environment-file: ${{ matrix.conda }}
-        activate-environment: test
-        auto-activate-base: false
+        environment-name: myenv
 
     - name: Build and install Python module
       run: python -m pip install . -vvv
