--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
       run: python -m pip install . -vvv
 
     - name: Run Python tests
-      working-directory: test/basic-python
+      working-directory: tests/basic-python
       run: |
         python version.py
         python MeshQuad4.py
@@ -116,7 +116,7 @@ jobs:
       run: python -m pip install . -vvv
 
     - name: Run Python tests
-      working-directory: test/basic-python
+      working-directory: tests/basic-python
       run: |
         python version.py
         python MeshQuad4.py
