--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,31 @@
 cmake_minimum_required(VERSION 3.18..3.21)
 
-# Basic settings
-# ==============
-
 project(GooseFEM)
+
+string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
+
+# Command-line options
+# ====================
 
 option(BUILD_ALL "${PROJECT_NAME}: Build tests, Python API & docs" OFF)
 option(BUILD_TESTS "${PROJECT_NAME}: Build tests" OFF)
 option(BUILD_EXAMPLES "${PROJECT_NAME}: Build examples" OFF)
 option(BUILD_PYTHON "${PROJECT_NAME}: Build Python API" OFF)
 option(BUILD_DOCS "${PROJECT_NAME}: Build docs" OFF)
-option(USE_SIMD "${PROJECT_NAME} - Python: Use xsimd and -march=native if available" OFF)
+option(USE_WARNINGS "${PROJECT_NAME}: Build with runtime warnings" ON)
+option(USE_ASSERT "${PROJECT_NAME}: Build with assertions" ON)
+option(USE_DEBUG "${PROJECT_NAME}: Build in debug mode" OFF)
+option(USE_SIMD "${PROJECT_NAME}: Build with hardware optimization" OFF)
+
+if(SKBUILD)
+    set(BUILD_ALL 0)
+    set(BUILD_TESTS 0)
+    set(BUILD_PYTHON 1)
+    set(BUILD_DOCS 0)
+endif()
+
+# Read version
+# ============
 
 if (DEFINED ENV{SETUPTOOLS_SCM_PRETEND_VERSION})
     set(PROJECT_VERSION $ENV{SETUPTOOLS_SCM_PRETEND_VERSION})
@@ -24,8 +39,6 @@ else()
 
     message(STATUS "Building ${PROJECT_NAME} ${PROJECT_VERSION}")
 endif()
-
-string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
 
 # Set target
 # ==========
@@ -43,57 +56,62 @@ target_link_libraries(${PROJECT_NAME} INTERFACE xtensor)
 target_compile_definitions(${PROJECT_NAME} INTERFACE
     ${PROJECT_NAME_UPPER}_VERSION="${PROJECT_VERSION}")
 
-# Installation
-# ============
+# Libraries
+# =========
 
 include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
+include(CTest)
+include("${PROJECT_NAME}Config.cmake")
 
-install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/" DESTINATION include)
+# Installation headers / CMake / pkg-config
+# =========================================
 
-configure_file("include/${PROJECT_NAME}/version.h"
-               "${CMAKE_CURRENT_BINARY_DIR}/version.h"
-                @ONLY)
+if(NOT SKBUILD)
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/version.h"
-        DESTINATION "include/${PROJECT_NAME}/")
+    install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/" DESTINATION include)
 
-install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets)
+    configure_file("include/${PROJECT_NAME}/version.h"
+                   "${CMAKE_CURRENT_BINARY_DIR}/version.h"
+                    @ONLY)
 
-install(
-    EXPORT ${PROJECT_NAME}-targets
-    FILE "${PROJECT_NAME}Targets.cmake"
-    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
+    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/version.h"
+            DESTINATION "include/${PROJECT_NAME}/")
 
-set(${PROJECT_NAME}_TMP ${CMAKE_SIZEOF_VOID_P})
-unset(CMAKE_SIZEOF_VOID_P)
+    install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets)
 
-write_basic_package_version_file(
-    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
-    VERSION "${PROJECT_VERSION}"
-    COMPATIBILITY AnyNewerVersion)
-
-set(CMAKE_SIZEOF_VOID_P ${${PROJECT_NAME}_TMP})
-
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}Config.cmake"
-              "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+    install(
+        EXPORT ${PROJECT_NAME}-targets
+        FILE "${PROJECT_NAME}Targets.cmake"
         DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
 
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc.in"
-               "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc" @ONLY)
+    set(${PROJECT_NAME}_TMP ${CMAKE_SIZEOF_VOID_P})
+    unset(CMAKE_SIZEOF_VOID_P)
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
-        DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
+    write_basic_package_version_file(
+        "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+        VERSION "${PROJECT_VERSION}"
+        COMPATIBILITY AnyNewerVersion)
 
-# Add builds
-# ==========
+    set(CMAKE_SIZEOF_VOID_P ${${PROJECT_NAME}_TMP})
 
-include("${PROJECT_NAME}Config.cmake")
-include(CTest)
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}Config.cmake"
+                  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+            DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
 
-# Tests
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc.in"
+                   "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc" @ONLY)
+
+    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
+            DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
+
+endif()
+
+# Build tests
+# ===========
 
 if(BUILD_TESTS OR BUILD_ALL)
+
     enable_testing()
     add_subdirectory(tests/basic)
 
@@ -101,34 +119,87 @@ if(BUILD_TESTS OR BUILD_ALL)
     add_subdirectory(tests/gmat)
 endif()
 
-# Examples
+# Build examples
+# ==============
 
 if(BUILD_EXAMPLES OR BUILD_ALL)
+
     enable_testing()
     add_subdirectory(docs/examples)
+
 endif()
 
-# Python API
+# Build Python API
+# ================
 
 if(BUILD_PYTHON OR BUILD_ALL)
-    find_package(Python REQUIRED COMPONENTS Interpreter Development NumPy)
+
+    # The C++ functions are build to a library with name "_${PROJECT_NAME}"
+    # The Python library simply loads all functions
+    set(PYPROJECT_NAME "_${PROJECT_NAME}")
+
+    if(NOT CMAKE_BUILD_TYPE)
+        set(CMAKE_BUILD_TYPE Release)
+    endif()
+
     find_package(pybind11 REQUIRED CONFIG)
     find_package(xtensor-python REQUIRED)
-    pybind11_add_module(mypymod python/main.cpp)
-    set_target_properties(mypymod PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
-    target_link_libraries(mypymod PUBLIC ${PROJECT_NAME} pybind11::module Python::NumPy xtensor-python)
-    target_compile_definitions(mypymod PRIVATE VERSION_INFO=${PROJECT_VERSION})
+
+    if (SKBUILD)
+        find_package(NumPy REQUIRED)
+    else()
+        find_package(Python REQUIRED COMPONENTS Interpreter Development NumPy)
+    endif()
+
+    pybind11_add_module(${PYPROJECT_NAME} python/main.cpp)
+
+    target_compile_definitions(${PYPROJECT_NAME} PUBLIC VERSION_INFO=${PROJECT_VERSION})
+    target_link_libraries(${PYPROJECT_NAME} PUBLIC ${PROJECT_NAME} xtensor-python)
+
+    if (SKBUILD)
+        target_include_directories(${PYPROJECT_NAME} PUBLIC ${NumPy_INCLUDE_DIRS})
+    else()
+        target_link_libraries(${PYPROJECT_NAME} PUBLIC ${PROJECT_NAME} pybind11::module Python::NumPy)
+    endif()
+
+    if (USE_WARNINGS)
+        target_link_libraries(${PYPROJECT_NAME} PUBLIC ${PROJECT_NAME}::warnings)
+        message(STATUS "Compiling ${PROJECT_NAME}-Python with run-time warnings")
+    endif()
+
+    if (USE_ASSERT)
+        target_link_libraries(${PYPROJECT_NAME} PUBLIC ${PROJECT_NAME}::assert)
+        message(STATUS "Compiling ${PROJECT_NAME}-Python with assertions")
+    endif()
+
+    if (USE_DEBUG)
+        target_link_libraries(${PYPROJECT_NAME} PUBLIC ${PROJECT_NAME}::debug)
+        message(STATUS "Compiling ${PROJECT_NAME}-Python in debug mode")
+    endif()
+
     if (USE_SIMD)
         find_package(xtensor REQUIRED)
         find_package(xsimd REQUIRED)
-        target_link_libraries(mypymod PUBLIC xtensor::optimize xtensor::use_xsimd)
-        message(STATUS "Compiling ${PROJECT_NAME} with hardware optimization")
+        target_link_libraries(${PYPROJECT_NAME} PUBLIC xtensor::optimize xtensor::use_xsimd)
+        message(STATUS "Compiling ${PROJECT_NAME}-Python with hardware optimization")
     endif()
+
+    if (SKBUILD)
+        if(APPLE)
+            set_target_properties(${PYPROJECT_NAME} PROPERTIES INSTALL_RPATH "@loader_path/${CMAKE_INSTALL_LIBDIR}")
+        else()
+            set_target_properties(${PYPROJECT_NAME} PROPERTIES INSTALL_RPATH "$ORIGIN/${CMAKE_INSTALL_LIBDIR}")
+        endif()
+        install(TARGETS ${PYPROJECT_NAME} DESTINATION .)
+    endif()
+
 endif()
 
-# Documentation
+# Build documentation
+# ===================
 
 if(BUILD_DOCS OR BUILD_ALL)
+
     find_package(Doxygen REQUIRED)
 
     set(DOXYGEN_EXCLUDE_SYMBOLS detail)
@@ -152,4 +223,5 @@ if(BUILD_DOCS OR BUILD_ALL)
     set(DOXYGEN_STRIP_FROM_INC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include")
     set(DOXYGEN_STRIP_FROM_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include")
     doxygen_add_docs(docs "${CMAKE_CURRENT_SOURCE_DIR}/include" "README.md")
+
 endif()
