--- a/tests/gmat/CMakeLists.txt
+++ b/tests/gmat/CMakeLists.txt
@@ -1,61 +1,52 @@
-
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.19..3.21)
 
 if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-    project(GooseFEM-test-gmat)
+    project(GooseFEM)
     find_package(GooseFEM REQUIRED CONFIG)
+    option(USE_ASSERT "${PROJECT_NAME}: Build with assertions" ON)
+    option(USE_DEBUG "${PROJECT_NAME}: Build in debug mode" OFF)
+    option(USE_SIMD "${PROJECT_NAME}: Build with hardware optimization" OFF)
 endif()
 
-set(ASSERT ON)
-set(DEBUG ON)
-option(SIMD "Enable xsimd" ON)
-option(WARNINGS "Enable warnings" ON)
+set(MYPROJECT "${PROJECT_NAME}-test-gmat")
 
-set(test_name "test-gmat")
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
 
 find_package(Catch2 REQUIRED)
+find_package(xtensor REQUIRED)
 
-if(NOT WIN32)
-    find_package(GMatElastic REQUIRED)
-    find_package(GMatElastoPlasticQPot REQUIRED)
+add_library(mytarget INTERFACE IMPORTED)
 
-    add_executable(${test_name}
-        main.cpp
-        hybrid-elastic.cpp
-        hybrid-elastoplasticqpot.cpp)
+target_link_libraries(mytarget INTERFACE
+    ${PROJECT_NAME}
+    ${PROJECT_NAME}::compiler_warnings
+    Catch2::Catch2)
 
-    target_link_libraries(${test_name} PRIVATE
-        Catch2::Catch2
-        GooseFEM
-        GMatElastic
-        GMatElastoPlasticQPot)
-else()
-    find_package(GMatElastoPlasticQPot REQUIRED)
-
-    add_executable(${test_name}
-        main.cpp
-        hybrid-elastoplasticqpot.cpp)
-
-    target_link_libraries(${test_name} PRIVATE
-        Catch2::Catch2
-        GooseFEM
-        GMatElastoPlasticQPot)
+if(USE_ASSERT)
+    target_link_libraries(mytarget INTERFACE ${PROJECT_NAME}::assert)
+    message(STATUS "Compiling ${MYPROJECT} with assertions")
 endif()
 
-if(SIMD)
-    target_link_libraries(${test_name} PRIVATE xtensor::optimize xtensor::use_xsimd)
+if(USE_DEBUG)
+    target_link_libraries(mytarget INTERFACE ${PROJECT_NAME}::debug)
+    message(STATUS "Compiling ${MYPROJECT} in debug mode")
 endif()
 
-if(WARNINGS)
-    target_link_libraries(${test_name} PRIVATE GooseFEM::compiler_warnings)
+if(USE_SIMD)
+    find_package(xtensor REQUIRED)
+    find_package(xsimd REQUIRED)
+    target_link_libraries(mytarget INTERFACE xtensor::use_xsimd xtensor::optimize)
+    message(STATUS "Compiling ${MYPROJECT} with hardware optimization")
 endif()
 
-if(ASSERT)
-    target_link_libraries(${test_name} PRIVATE GooseFEM::assert)
-endif()
+file(GLOB APP_SOURCES *.cpp)
 
-if(DEBUG)
-    target_link_libraries(${test_name} PRIVATE GooseFEM::debug)
-endif()
-
-add_test(NAME ${test_name} COMMAND ${test_name})
+foreach(mysource ${APP_SOURCES})
+    string(REPLACE ".cpp" "" myexec ${mysource})
+    get_filename_component(myexec ${myexec} NAME)
+    add_executable(${myexec} ${mysource})
+    target_link_libraries(${myexec} PRIVATE mytarget)
+    add_test(NAME ${myexec} COMMAND ${myexec})
+endforeach()
