--- a/environment.yaml
+++ b/environment.yaml
@@ -1,30 +1,20 @@
 channels:
   - conda-forge
 dependencies:
-  # dependencies
-  - xtensor
-  - eigen
-
-  # optional dependencies
-  - xsimd
-
-  # build tools
-  - cmake
-  - ninja
-  - setuptools_scm
-
-  # Python API
-  - python
-  - numpy
-  - pybind11
-  - xtensor-python
-
-  # to run tests
   - catch2
+  - cmake
+  - doxygen
+  - eigen
   - gmatelastic
   - gmatelastoplasticqpot
-
-  # build docs
-  - doxygen
   - mathjax
+  - ninja
+  - numpy
+  - pybind11
+  - python
+  - scikit-build
+  - setuptools_scm
+  - xsimd
+  - xtensor
+  - xtensor-python
 
