--- a/tests/basic/CMakeLists.txt
+++ b/tests/basic/CMakeLists.txt
@@ -1,56 +1,52 @@
-
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.19..3.21)
 
 if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-    project(GooseFEM-test-basic)
+    project(GooseFEM)
     find_package(GooseFEM REQUIRED CONFIG)
+    option(USE_ASSERT "${PROJECT_NAME}: Build with assertions" ON)
+    option(USE_DEBUG "${PROJECT_NAME}: Build in debug mode" OFF)
+    option(USE_SIMD "${PROJECT_NAME}: Build with hardware optimization" OFF)
 endif()
 
-set(ASSERT ON)
-set(DEBUG ON)
-option(XSIMD "Use xsimd optimisations" ON)
+set(MYPROJECT "${PROJECT_NAME}-test-basic")
 
-set(test_name "test-basic")
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
 
 find_package(Catch2 REQUIRED)
 find_package(xtensor REQUIRED)
 
-add_executable(${test_name}
-    main.cpp
-    version.cpp
-    Allocate.cpp
-    Element.cpp
-    ElementHex8.cpp
-    ElementQuad4.cpp
-    ElementQuad4Planar.cpp
-    Iterate.cpp
-    Matrix.cpp
-    MatrixDiagonal.cpp
-    MatrixDiagonalPartitioned.cpp
-    Mesh.cpp
-    MeshTri3.cpp
-    MeshQuad4.cpp
-    MeshHex8.cpp
-    Vector.cpp
-    VectorPartitioned.cpp)
+add_library(mytarget INTERFACE IMPORTED)
 
-target_link_libraries(${test_name} PRIVATE
-    Catch2::Catch2
-    GooseFEM
-    GooseFEM::compiler_warnings
-    xtensor::optimize)
+target_link_libraries(mytarget INTERFACE
+    ${PROJECT_NAME}
+    ${PROJECT_NAME}::compiler_warnings
+    Catch2::Catch2)
 
-if(ASSERT)
-    target_link_libraries(${test_name} PRIVATE GooseFEM::assert)
+if(USE_ASSERT)
+    target_link_libraries(mytarget INTERFACE ${PROJECT_NAME}::assert)
+    message(STATUS "Compiling ${MYPROJECT} with assertions")
 endif()
 
-if(DEBUG)
-    target_link_libraries(${test_name} PRIVATE GooseFEM::debug)
+if(USE_DEBUG)
+    target_link_libraries(mytarget INTERFACE ${PROJECT_NAME}::debug)
+    message(STATUS "Compiling ${MYPROJECT} in debug mode")
 endif()
 
-if(SIMD)
+if(USE_SIMD)
+    find_package(xtensor REQUIRED)
     find_package(xsimd REQUIRED)
-    target_link_libraries(${test_name} PRIVATE xtensor::use_xsimd)
+    target_link_libraries(mytarget INTERFACE xtensor::use_xsimd xtensor::optimize)
+    message(STATUS "Compiling ${MYPROJECT} with hardware optimization")
 endif()
 
-add_test(NAME ${test_name} COMMAND ${test_name})
+file(GLOB APP_SOURCES *.cpp)
+
+foreach(mysource ${APP_SOURCES})
+    string(REPLACE ".cpp" "" myexec ${mysource})
+    get_filename_component(myexec ${myexec} NAME)
+    add_executable(${myexec} ${mysource})
+    target_link_libraries(${myexec} PRIVATE mytarget)
+    add_test(NAME ${myexec} COMMAND ${myexec})
+endforeach()
